- header height fix - dashboard cards spacing fix

--- a/src/app/company-data/company-data.component.scss
+++ b/src/app/company-data/company-data.component.scss
@@ -4,9 +4,9 @@
 
 .task-card {
   border-radius: 8px;
-  width: max-content;
   display: flex;
   min-width: 400px;
+  width: 100%;
   overflow: hidden;
   border: 3px solid var(--card-color);
 }
